# notes_app

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.example  fastapi.db  pyproject.toml
alembic/: env.py
alembic/versions/: 3b799bdaae57_first_migration.py  6f47033ba132_first_migration.py
app/: .dockerignore  Dockerfile  main.py
app/api/: filters.py  routers.py  validators.py
app/api/endpoints/: __init__.py  note.py
app/core/: base.py  config.py  constants.py  db.py  user.py
app/crud/: note.py
app/models/: __init__.py  enums.py  note.py  user.py
app/schemas/: __init__.py  note.py
app/services/: spelling_check.py
